[gd_scene load_steps=3 format=3 uid="uid://b4fgcr0304jmt"]

[ext_resource type="Script" uid="uid://co5wwbt6pjv7a" path="res://Scenes/PrepStation.gd" id="1_hpak2"]
[ext_resource type="Texture2D" uid="uid://bwbnqri3fqbl0" path="res://Assets/icon.svg" id="3_hpak2"]

[node name="PrepStation" type="Node2D"]
script = ExtResource("1_hpak2")
spriteTexturePath = "res://Assets/icon.svg"

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
y_sort_enabled = true
position = Vector2(0, -2.9999998)
scale = Vector2(0.81249994, 0.8124999)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="StationMenu" type="ColorRect" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -260.0
offset_top = -200.0
offset_right = 260.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.21950102, 0.21950102, 0.21950093, 1)

[node name="StationTextureRect" type="TextureRect" parent="CanvasLayer/StationMenu"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 38.0
offset_top = 38.0
offset_right = 362.0
offset_bottom = 362.0
texture = ExtResource("3_hpak2")

[node name="PreparePanel" type="Panel" parent="CanvasLayer/StationMenu"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -140.0
offset_top = -60.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0

[node name="PrepareButton" type="Button" parent="CanvasLayer/StationMenu/PreparePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Prepare"

[node name="IngredientPanel" type="Panel" parent="CanvasLayer/StationMenu"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -140.0
offset_top = 56.0
offset_right = -20.0
offset_bottom = 201.0
grow_horizontal = 0

[node name="IngredientTextureRect" type="TextureRect" parent="CanvasLayer/StationMenu/IngredientPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_right = 60.0
offset_bottom = 120.0
grow_horizontal = 2
expand_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/StationMenu/IngredientPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_top = -32.0
offset_right = 60.0
offset_bottom = -7.0
grow_horizontal = 2
text = "Chosen Ingredient:"
horizontal_alignment = 1

[node name="IngredientLabel" type="Label" parent="CanvasLayer/StationMenu/IngredientPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -25.0
offset_right = 60.0
grow_horizontal = 2
grow_vertical = 0
text = "None"
horizontal_alignment = 1

[connection signal="pressed" from="CanvasLayer/StationMenu/PreparePanel/PrepareButton" to="." method="_on_prepare_button_pressed"]
